# md5-cracker

./: .gitignore  deploy-k8s.sh  deploy-swarm.sh  deploy.sh  docker-compose.yml  docker-stack.yml  undeploy-k8s.sh  undeploy-swarm.sh  undeploy.sh
k8s/: grafana-dashboards.yaml  namespace.yaml
k8s/manager/: configmap.yaml  deployment.yaml  monitoring.yml  service.yaml
k8s/mongodb/: init-replicaset-job.yaml  monitoring.yml  service.yaml  statefulset.yaml  storage.yaml
k8s/monitoring/: service.yaml
k8s/rabbitmq/: configmap.yaml  monitoring.yml  secret.yaml  service.yaml  statefulset.yaml
k8s/worker/: configmap.yaml  deployment.yaml  monitoring.yml  service.yaml
manager/: .env  .example_env  Dockerfile  Justfile  __init__.py  app.py  config.py  docker-compose.yml  pyproject.toml  setup.cfg
manager/models/: __init__.py  request.py  task.py
manager/services/: mongodb.py  rabbitmq.py  retry.py
manager/src/: app.py
manager/src/core/: config.py  logging.py
manager/src/models/: __init__.py  request.py  task.py
manager/src/services/: __init__.py  mongodb.py  rabbitmq.py  retry.py
manager/src/utils/: __init__.py  decorators.py  task_partitioner.py
manager/utils/: __init__.py  decorators.py  task_partitioner.py
prometheus/: prometheus.yml
worker/: .env  .example_env  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml
worker/core/: __init__.py  generator.py  hasher.py
worker/models/: __init__.py  task.py
worker/services/: __init__.py  processor.py  rabbitmq.py
worker/src/: app.py
worker/src/core/: __init__.py  config.py  generator.py  hasher.py  logging.py
worker/src/models/: __init__.py  task.py
worker/src/services/: __init__.py  processor.py  rabbitmq.py
worker/src/utils/: __init__.py  decorators.py  metrics.py  signal_handler.py
worker/utils/: __init__.py  decorators.py  metrics.py  signal_handler.py
