[project]
name = "md5-cracker-manager"
version = "1.0.0"
description = "Manager service for MD5 cracker distributed system"
authors = [{ name = "Anton Lukisha", email = "anton.lukisha.dev@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "pymongo==4.16.0",
    "pika==1.3.2",
    "python-dotenv==1.2.1",
    "prometheus-flask-exporter==0.23.2",
    "gunicorn==25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "black==26.1.0",
    "flake8==7.3.0",
    "mypy==1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]