[project]
name = "md5-cracker-manager"
version = "0.1.0"
description = "Manager service for MD5 cracker distributed system"
authors = [{ name = "Anton Lukisha", email = "anton.lukisha.dev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "pymongo==4.16.0",
    "pika==1.3.2",
    "python-dotenv==1.2.1",
    "prometheus-flask-exporter==0.23.2",
    "gunicorn==25.1.0",
    "orjson==3.11.7",
    "coloredlogs>=15.0.1",
    "python-decouple>=3.8",
    "waitress>=3.0.2"
]

[project.scripts]
app = "src.app:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "black==26.1.0",
    "isort>=8.0.1",
    "ruff>=0.15.6",
    "mypy==1.19.1",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pytils.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = []
