[project]
name = "md5-cracker-worker"
version = "0.1.0"
description = "Worker service for MD5 cracker distributed system"
authors = [{ name = "Anton Lukisha", email = "anton.lukisha.dev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pika==1.3.2",
    "prometheus-client==0.19.0",
    "pymongo==4.5.0",
    "python-dotenv>=1.2.1",
    "gunicorn==25.1.0",
    "orjson==3.11.7",
    "psutil==7.2.2"
]

[project.scripts]
app = "app:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "black==26.1.0",
    "flake8==7.3.0",
    "mypy==1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pytils.*"
ignore_missing_imports = true
